--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -11,8 +11,10 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    flex-wrap: wrap;
     padding-bottom: 5rem;
+    @media (max-width: 530px) {
+      flex-direction: column;
+    }
     &--first {
       background-color: #000;
       overflow: hidden;
@@ -28,7 +30,7 @@
       transform: scale(1.15);
       @media (max-width: 768px) {
         max-width: 530px;
-        object-fit: cover;
+        object-fit: contain;
       }
       transition: all 0.4s ease-in-out;
       &:hover {
